Вылизала мелочи+резы

--- a/temp.tex
+++ b/temp.tex
@@ -95,7 +95,7 @@
 
 \newpage
 \section{Введение}
-	\quad\,\,\,Нейрокомпьютерный интерфейс (англ. {\it brain-computer interface, mind-machine interface, brain–machine interface}, интерфейс «мозг-компьютер», зачастую используется сокращение {\it BCI}) ~--- специальный вид интерфейса, созданный для обмена информацией между мозгом и средствами вычислительной техники. Одной из задач, стоящих перед исследователями, работающими в данной области, является создание устройств, которые позволят людям с утраченными способностями организма полноценно взаимодействовать с окружающим миром.
+	\quad\,\,\,Нейрокомпьютерный интерфейс (англ. {\it brain-computer interface, mind-machine interface, brain–machine interface}, интерфейс «мозг-компьютер», зачастую используется сокращение {\it BCI})~--- специальный вид интерфейса, созданный для обмена информацией между мозгом и средствами вычислительной техники. Одной из задач, стоящих перед исследователями, работающими в данной области, является создание устройств, которые позволят людям с утраченными способностями организма полноценно взаимодействовать с окружающим миром.
 	\par В последние годы ведётся активная разработка различных практических приложений с использованием интерфейса «мозг-компьютер». Многие исследовательские группы по всему миру занимаются тематикой {\it BCI}, и в разработке многих направлений тематики имеются заметные успехи, однако до сих пор существует масса сложностей в практическом применении нейрокомпьютерного интерфейса. Управление объектами реального мира может быть использовано в широком спектре областей, в частности, в медицине, развлекательной индустрии и пр.
 	\par Тем не менее, на сегодняшний день распознавание воображаемых движений является стандартной задачей, разработаны алгоритмы, практически безошибочно классифицирующие ментальные задания, однако построенные системы {\it BCI} сложно назвать приспособленными для использования с практической точки зрения.
 	\par Основной целью данной работы является разработка нейрокомпьютерного интерфейса для управления динамическим объектом в некотором направлении с использованием общедоступного коммерческого устройства {\it Emotiv EPOC}. Кроме того, в данной дипломной работе проводится обзор существующих систем {\it BCI} и распространённых подходов к решению подобного рода задач.
@@ -109,9 +109,9 @@
 
 \section{Постановка задачи}
 	\quad\,\,\,Целью данной работы является разработка нейрокомпьютерного интерфейса для управления динамическим объектом в некотором направлении с использованием общедоступного коммерческого устройства {\it Emotiv EPOC}, предназначенного для регистрации активности головного мозга при помощи зафиксированных сенсоров. Данное устройство подробно описано в разделе~\ref{Emotiv_descr}.
- 	\par Пусть имеется $M$ сенсоров, в моменты времени $1, 2, \dots, t, \dots$ $i$-ый сенсор фиксирует значения $x^i(t)$, $i = \overline{1,M}.$ Требуется определить класс регистрируемого в произвольный момент времени $t$ сигнала, в частности, в данной работе в качестве классов выступают возможные направления движения курсора. Обычно полагают, что многомерный сигнал разбит на отрезки фиксированной длины $T$, на протяжении каждого из которых класс сигнала остаётся неизменным. Везде далее будем придерживаться данного предположения.
+ 	\par Пусть имеется $N_e$ сенсоров, в моменты времени $1, 2, \dots, t, \dots$ $i$-ый сенсор фиксирует значения $x^i(t)$, $i = \overline{1,N_e}.$ Требуется определить класс регистрируемого в произвольный момент времени $t$ сигнала, в частности, в данной работе в качестве классов выступают возможные направления движения курсора. Обычно полагают, что многомерный сигнал разбит на отрезки фиксированной длины $T$, на протяжении каждого из которых класс сигнала остаётся неизменным. Везде далее будем придерживаться данного предположения.
 	\par Дадим формальную математическую постановку задачи.
-	\par Имеется пространство объектов $\mathcal{X} \subset \mathbb{R}^{M \times T}$, каждый из которых представляет собой сигнал, зафиксированный при помощи $M$ сенсоров в течение периода времени $T$, и конечное множество имён классов $\mathcal{Y}$. Существует целевая зависимость $y^*: \mathcal{X} \to \mathcal{Y},$ значения которой известны только на объектах обучающей выборки $X^L = \{ (x^i, y^i)\}_{i=1}^L, \, x^i \in \mathcal{X} \subset \mathbb{R}^{M \times T}, \, y^i = y^*(x^i) \in \mathcal{Y}, \, L$ -- количество объектов обучающей выборки. Требуется построить алгоритм классификации $a: \mathcal{X} \to \mathcal{Y},$ аппроксимирующий целевую зависимость $y^*(x)$ на всем множестве $\mathcal{X}$ в соответствии с некоторым введённым функционалом качества.
+	\par Имеется пространство объектов $\mathcal{X} \subset \mathbb{R}^{N_e \times T}$, каждый из которых представляет собой сигнал, зафиксированный при помощи $N_e$ сенсоров, также называемых \textit{электродами}, в течение периода времени $T$, и конечное множество имён классов $\mathcal{Y}$. Существует целевая зависимость $y^*: \mathcal{X} \to \mathcal{Y},$ значения которой известны только на объектах обучающей выборки $X^L = \{ (x^i, y^i)\}_{i=1}^L, \, x^i \in \mathcal{X} \subset \mathbb{R}^{N_e \times T}, \, y^i = y^*(x^i) \in \mathcal{Y}, \, L$ -- количество объектов обучающей выборки. Требуется построить алгоритм классификации $a: \mathcal{X} \to \mathcal{Y},$ аппроксимирующий целевую зависимость $y^*(x)$ на всем множестве $\mathcal{X}$ в соответствии с некоторым введённым функционалом качества.
 
 \clearpage 
 
@@ -122,7 +122,7 @@
 	\par {\it Электроэнцефалография (ЭЭГ)} — раздел электрофизиологии, изучающий закономерности суммарной электрической активности мозга, отводимой с поверхности кожи головы или мозга, а также метод записи таких потенциалов. Получение электроэнцефалограммы осуществляется с помощью специализированных устройств -- электроэнцефалографов. Существуют различные устройства для записи ЭЭГ, отличающиеся характеристиками, среди которых: 
 	\begin{itemize}\itemsep0pt
 	\item
-	характеристики принимающего сигнала (частота, количество шума в сигнале);
+	характеристики принимающего сигнала (частота, уровень шума в сигнале);
 	\item
 	инвазивность (степень имплантирования электродов в кору головного мозга);
 	\item
@@ -337,8 +337,8 @@ $$x_n = \sum_{k=0}^{\frac{N}{2}} C_k \cos{\frac{2 \pi k (n + \phi_k)}{N}}\, = \,
 
 	\NepS {\bf Вейвлет-преобразование}
 	\par Вейвлет-преобразование — интегральное преобразование, которое представляет собой свертку вейвлет-функции, обладающей рядом характерных свойств, с сигналом. По аналогии с преобразованием Фурье происходит некое разложение исходного сигнала. Для дискретных сигналов используется дискретное вейвлет-преобразование.
-	\par Пусть имеется дискретный сигнал $x = (\, x_0, \, \ldots, \, x_{N-1}\, )$. Дискретное вейвлет-преобразование осуществляется путём применения набора фильтров. Сигнал подвергается действию фильтра низких частот с импульсным откликом $g$ и фильтра высоких частот с импульсным откликом $h$, в результате чего могут быть получены т.н. {\it коэффициенты аппроксимации} и {\it детализирующие коэффициенты} соответственно. После этого каждый из наборов коэффициентов прореживается в два раза. Кроме того, данное разложение может быть повторено с дальнейшим прореживанием коэффициентов после низкочастотной и высокочастотной фильтрации. Данный процесс может быть представлен в виде двоичного дерева, где листья и узлы соответствуют пространствам с различной частотно-временной локализацией. Схема действия одно- и трёхуровнего дискретного вейвлет-преобразования приведена на рис.~\ref{wavelet_scheme}.
-	\par Многоуровневое дискретное вейвлет-преобразование может быть представлено в виде вычисления коэффициентов путём сдвига и масштабирвования т.н. {\it базового} вейвлета.
+	\par Пусть имеется дискретный сигнал $x = (\, x_0, \, \ldots, \, x_{N-1}\, )$. Дискретное вейвлет-преобразование осуществляется путём применения набора фильтров. Сигнал подвергается действию фильтра низких частот с импульсным откликом $g$ и фильтра высоких частот с импульсным откликом $h$, в результате чего могут быть получены т.н. {\it коэффициенты аппроксимации} и {\it детализирующие коэффициенты} соответственно. После этого каждый из наборов коэффициентов прореживается в два раза. Кроме того, данное разложение может быть повторено с дальнейшим прореживанием коэффициентов после низкочастотной и высокочастотной фильтрации. Данный процесс может быть представлен в виде двоичного дерева. Схема действия одно- и трёхуровнего дискретного вейвлет-преобразования приведена на рис.~\ref{wavelet_scheme}.
+
 
 \begin{figure}[h!]
 \begin{minipage}[h!]{1.0\linewidth}
@@ -350,7 +350,7 @@ $$x_n = \sum_{k=0}^{\frac{N}{2}} C_k \cos{\frac{2 \pi k (n + \phi_k)}{N}}\, = \,
 \caption{Схема действия одно- (а) и трёхуровнего (б) дискретного вейвлет-преобразования.}
 \label{wavelet_scheme}
 \end{figure}
-	\mbox{}\newline
+
 	\NepS {\bf Общий пространственный фильтр}
 	\par Общий пространственный фильтр (англ. {\it Common Spatial Pattern Filter, CSP}) реализует метод декомпозиции многоканального ЭЭГ сигнала, основанный на обучении по прецедентам.
 	\par Рассматривается задача классификации многомерных сигналов на два класса. Целью метода является разложение исходного сигнала на аддитивные составляющие таким образом, чтобы максимизировать дисперсию первых компонент и минимизировать дисперсию последних для объектов первого класса и добиться обратной ситуации для объектов второго класса. Матрица декомпозиции может быть найдена в результате одновременной диагонализации выборочных матриц ковариации для каждого из классов. В результате может быть сформирован вектор характерных признаков путём соединения значений некоторого количества первых и последних компонент разложенного сигнала.
@@ -358,7 +358,6 @@ $$x_n = \sum_{k=0}^{\frac{N}{2}} C_k \cos{\frac{2 \pi k (n + \phi_k)}{N}}\, = \,
 
 	\subsection{Классификация}
 	\par После построения искомого признакового пространства алгоритм, используемый для классификации преобразованных объектов, играет не столь значительную роль. После предобработки и преобразования исходных данных проводится обучение классификатора, после чего обученный классификатор может принимать решение о наличии либо отсутствии волн P300 и, как следствие, о необходимости выполнять действие, предписанное стимулом. Наиболее часто в исследованиях по тематике {\it BCI} используются описанные ниже типы классификаторов. Более подробное описание данных алгоритмов может быть найдено в~\cite{Vorontsov}.
-	\newline	\newline	\newline
 	\setcounter{pe}{0}
 	\NepS {\bf Байесовский классификатор}
 	\par Байесовский классификатор — широкий класс алгоритмов классификации, основанный на принципе максимума апостериорной вероятности. Для классифицируемого объекта вычисляются функции правдоподобия каждого из классов, по ним вычисляются апостериорные вероятности классов. Объект относится к тому классу, для которого апостериорная вероятность максимальна.
@@ -443,7 +442,7 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 \end{figure}
 
 	\par {\it Пробой} назовем последовательность из выделения некоторого визуального стимула в течение 250 мс, а также последующие 1250 мс, необходимые для обработки, классификации данных, генерации команды и выполнения перемещения курсора. Межстимульный интервал при проведении эксперимента равнялся 2500 мс, включая время, необходимое на обработку и классификацию данных. Назовём {\it сессией} последовательность проб, предпринятых для достижения курсором целевого положения.
-	\par Запись ЭЭГ осуществлялась с частотой дискретизации 128 Гц (с внутренней частотой дискретизации устройства 2048 Гц и последующей первичной обработкой) при помощи устройства {\it Emotiv EPOC}. При записи данных устройство находилось в двух различных положениях: положение по умолчанию и инверсированное положение. В положении по умолчанию были использованы данные 10 сенсоров (F3, FC5, T7, P7, O1, O2, P8, T8, FC6, и F4), поскольку данное подмножество обеспечивает наилучшую нейтрализацию компонент, не отвечающих за волны P300, а также включает сенсоры O1, O2, при помощи которых могут быть зафиксированы некоторые из компонент волн P300~\cite{ensemble}. В инверсированном положении были использованы данные 8 сенсоров (FC6, F4, P8, AF4, AF3, F3, P7 и FC5), поскольку они покрывают центральную часть скальпа, которая считается областью, участвующей в генерации волн P300. Положения указанных сенсоров на голове человека изображены на рис.~\ref{position}.
+	\par Запись ЭЭГ осуществлялась с частотой дискретизации 128 Гц (с внутренней частотой дискретизации устройства 2048 Гц и последующей первичной обработкой) при помощи устройства {\it Emotiv EPOC}. При записи данных устройство находилось в двух различных положениях: положении по умолчанию и инверсированном положении. В~положении по умолчанию были использованы данные 10 сенсоров (F3, FC5, T7, P7, O1, O2, P8, T8, FC6, и F4), поскольку данное подмножество обеспечивает наилучшую нейтрализацию компонент, не отвечающих за волны P300, а также включает сенсоры O1, O2, при помощи которых могут быть зафиксированы некоторые из компонент волн P300~\cite{ensemble}. В~инверсированном положении были использованы данные 8 сенсоров (FC6, F4, P8, AF4, AF3, F3, P7 и FC5), поскольку они покрывают центральную часть скальпа, которая считается областью, участвующей в генерации волн P300. Положения указанных сенсоров на голове человека изображены на рис.~\ref{position}.
 
 \begin{figure}[h!]
 \begin{minipage}[h!]{0.48\linewidth}
@@ -494,21 +493,21 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 	\par К данным ЭЭГ, подвергнутым фильтрации, был применен метод независимых компонент для извлечения независимых источников. Была использована реализация алгоритма {\it FastICA} для {\tt MATLAB}. Описание алгоритма было представлено в предыдущих разделах. Более подробно алгоритм описан в \cite{FastICA}.
 
 	\subsection{Отбор признаков}
-	\par В исследовании \cite{Piccione} был применен метод с использованием нечетких регуляторов (англ. {\it fuzzy control method}) для отбора признаков, наиболее похожих на волны P300, для дальнейшей классификации. Другие исследования используют неавтоматический метод отбора признаков. Поскольку в данной работе используется коммерческое {\it BCI}-устройство с высоким уровнем шума в получаемых данных, нет возможности ожидать наличия среди полученных независимых компонент наличие близкой к P300-волне, наподобие полученных в исследовании \cite{Piccione}. Кроме того, данный метод существенно увеличивает время обработки данных. В исследовании \cite{James} показано, что результирующие компоненты ICA, отличные от P300-волн, практически неотличимы для целевых и нецелевых проб, поскольку они являются компонентами одних и тех же источников артефактов в одинаковых условиях. Для первого подхода к компонентам, полученным при помощи метода независимых компонент, применяется дискретное вейвлет-преобразование 3-го порядка, где коэффициенты аппроксимации представляют собой  энергию сигнала в полосе P300-волн, включающих энергию сигнала в дельта-, тета- и части альфа-ритмов, как показано в некоторых исследованиях~\cite{alco}. Для второго подхода преобразование применяется непосредственно к данным ЭЭГ. Для обоих подходов был использован вейвлет Добеши, поскольку он широко распространён в литературе для подобных целей. Результирующие коэффициенты аппроксимации были использованы в качестве признаков и были конкатенированы в единые вектора. Результирующая размерность признакового представления объектов равнялась $N_e \times N_f,$ где $N_e$ -- количество сенсоров, $N_f$ -- количество признаков в одной пробе. Кроме аппроксимирующих коэффициентов, были также использованы описанные в предыдущих разделах морфологические признаки. С учётом выбора одного из указанных подмножеств электродов имеем $N_e = 8$ или $N_e = 10.$
-	\par Далее отобранные признаки подвергались стандартизации, т.е. преобразованию, обеспечивающему нулевое среднее значение каждого признака и единичную матрицу ковариаций. Нормировочные константы вычислялись для каждого сенсора с учётом всех имеющихся в обучающей выборке данных, а затем также применялись к отложенной выборке. Отметим, что стандартизации отдельных проб без учёта остальной информации может уничтожить важную информацию об амплитуде имеющихся волн P300, в связи с этим необходимо проведение данной процедуры для всех зарегистрированных проб.
+	\par В исследовании \cite{Piccione} был применен метод с использованием нечетких регуляторов (англ. {\it fuzzy control method}) для отбора признаков, наиболее похожих на волны P300, для дальнейшей классификации. Другие исследования используют неавтоматический метод отбора признаков. Поскольку в данной работе используется коммерческое {\it BCI}-устройство с высоким уровнем шума в получаемых данных, нет возможности ожидать наличия среди полученных независимых компонент наличие близкой к P300-волне, наподобие полученных в исследовании \cite{Piccione}. Кроме того, данный метод существенно увеличивает время обработки данных. В исследовании \cite{James} показано, что результирующие компоненты ICA, отличные от P300-волн, практически неотличимы для целевых и нецелевых проб, поскольку они являются компонентами одних и тех же источников артефактов в одинаковых условиях. Для первого подхода к компонентам, полученным при помощи метода независимых компонент, применяется дискретное вейвлет-преобразование 3-го порядка, где коэффициенты аппроксимации представляют собой  энергию сигнала в полосе P300-волн. Для второго подхода преобразование применяется непосредственно к данным ЭЭГ. Для обоих подходов был использован вейвлет Добеши, поскольку он широко распространён в литературе для подобных целей. Результирующие коэффициенты аппроксимации были использованы в качестве признаков и были конкатенированы в единые вектора. Результирующая размерность признакового представления объектов равнялась $N_e \times N_f,$ где $N_e$ -- количество сенсоров, $N_f$ -- количество признаков в одной пробе. Помимо аппроксимирующих коэффициентов, были также использованы описанные в предыдущих разделах морфологические признаки. С учётом выбора одного из указанных подмножеств электродов имеем $N_e = 8$ или $N_e = 10.$
+	\par Далее отобранные признаки были центрированы и декоррелированы, т.е. подвергнуты преобразованию, обеспечивающему нулевое среднее значение каждого признака и единичную матрицу ковариаций. Нормировочные константы вычислялись для каждого сенсора с учётом всех имеющихся в обучающей выборке данных, а затем также применялись к отложенной выборке. Отметим, что осуществление данной процедуры для отдельных проб без учёта остальной информации может уничтожить важную информацию об амплитуде имеющихся волн P300, в связи с этим необходимо учитывать данные всех зарегистрированных проб.
 
 \subsection{Классификация}
-	\par После предобработки и отбора признаков, наиболее вероятно характеризующих наличие либо отсутствие волны P300, проводились обучение и  настройка параметров классификатора. Как было упомянуто выше, данные центрированы и имеют единичную матрицу ковариаций. В качестве классификаторов были использованы нейронная сеть и машина опорных векторов.
-	\par В качестве нейронной сети применялась нейронная сеть прямого распространения с одним скрытым слоем. Структура подобного классификатора изображена на рис.~\ref{nn}. Отметим, что распределение данных, получаемых каждым из нейронов входного слоя сети, осуществлялось между всеми нейронами скрытого слоя. В качестве функций активации для нейронов скрытого и выходного слоев была использована функция гиперболического тангенса в соответствии с рекомендациями~\cite{activation}. Поскольку метки классов соответствовали наличию и отсутствию волн P300, полученное итоговое значение являлось оценкой вероятности наличия волн данного типа. В соответствии с рекомендациями~\cite{neu_net} считалось, что итоговое значение, превышающее 0.76, свидетельствовало о наличии волн P300, иное значение -- об их отсутствии. Для обучения нейронной сети применялся метод обратного распространения ошибки.
+	\par После предобработки и отбора признаков, наиболее вероятно характеризующих наличие либо отсутствие волны P300, проводились обучение и  настройка параметров классификатора. Как было упомянуто выше, данные центрированы и имеют единичную матрицу ковариаций. В качестве классификаторов были использованы нейронная сеть и линейный классификатор.
+	\parПрименялась нейронная сеть прямого распространения с одним скрытым слоем. Структура подобного классификатора изображена на рис.~\ref{nn}. Отметим, что распределение данных, получаемых каждым из нейронов входного слоя сети, осуществлялось между всеми нейронами скрытого слоя. В качестве функций активации для нейронов скрытого и выходного слоев была использована функция гиперболического тангенса в соответствии с рекомендациями~\cite{activation}. Поскольку метки классов соответствовали наличию и отсутствию волн P300, полученное итоговое значение являлось оценкой наличия волн данного типа. В соответствии с рекомендациями~\cite{neu_net} считалось, что итоговое значение, превышающее 0.76, свидетельствовало о наличии волн P300, иное значение -- об их отсутствии. Для обучения нейронной сети применялся метод обратного распространения ошибки.
 	\begin{figure}[h!]
 	\center{\includegraphics[width=1.0\textwidth]{network.png}}
 		\caption{Структура используемой модели нейронной сети.}
 	\label{nn}
 	\end{figure}
 
-	\par Кроме того, была использована реализация машины опорных векторов в библиотеке {\it LibSVM}. Для алгоритма с единым классификатором было использовано квадратичное ядро, в то время как для алгоритма с отдельными классификаторами была использована линейная версия {\it SVM}. Значение гиперпараметра $C$ настраивалось при помощи отложенной выборки.
-	\par Для подхода с применением единого классификатора обучающая выборка состояла из $4N$ целевых и $13N$ нецелевых эпох. В связи с высоким уровнем шума в данных было проведено усреднение по наборам из пяти эпох. Как было упомянуто выше, случайно выбранные 75\% полученных объектов были использованы для обучения классификатора, в то время как оставшиеся 25\% были использованы для настройки параметров.
-	\par Для подхода, использующего отдельные классификаторы, были обучены четыре различных машины опорных векторов, отвечающих различным визуальным стимулам. В данном случае для каждого из классификаторов были доступны $N$ целевых и $4N$ нецелевых эпох, а усреднение проводилось по наборам из 3 эпох.
+	\par В качестве алгоритма обучения линейного классификатора применялся SVM. Была использована реализация машины опорных векторов библиотеки {\it LibSVM}. Для алгоритма с общим для всех типов стимулов классификатором было использовано квадратичное ядро, в то время как для алгоритма с отдельными классификаторами была использована линейная версия {\it SVM}. Значение гиперпараметра $C$ настраивалось при помощи отложенной выборки.
+	\par Для подхода с применением общего классификатора обучающая выборка состояла из $4N$ целевых и $13N$ нецелевых эпох. В связи с высоким уровнем шума в данных было проведено усреднение по наборам из пяти эпох. Как было упомянуто выше, случайно выбранные 75\% полученных объектов были использованы для обучения классификатора, в то время как оставшиеся 25\% были использованы для настройки параметров.
+	\par Для подхода, использующего отдельные классификаторы, были обучены четыре различных линейных классификатора, отвечающих различным визуальным стимулам. В данном случае для каждого из классификаторов были доступны $N$ целевых и $4N$ нецелевых эпох, а усреднение проводилось по наборам из 3 эпох.
 
 \subsection{Тестирование}
 	\par После обучения классификатора необходим запуск процесса тестирования в режиме реального времени вручную. В течение этого времени ведётся запись данных ЭЭГ, при этом стимулы выделяются в случайном порядке в течение 250 мс с последующей паузой в течение 1250 мс. Данные, полученные в течение этого времени, подвергаются описанной процедуре предобработки и выделения признаков и дальнейшей классификации при помощи обученного классификатора. В случае принятия решения о наличии компоненты волн P300 курсор перемещается в соответствующем направлении, в случае противоположного решения -- процесс продолжается без перемещения курсора.
@@ -517,17 +516,17 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 
 \section{Результаты}
 	\subsection{Результаты с положением устройства по умолчанию}
-	\par Как было упомянуто выше, при расположении устройства в позиции по умолчанию малое число электродов покрывают часть скальпа, отвечающую за генерацию волн P300. В таком положении наибольшее влияние данного эффекта может быть замечено только на данных, регистрируемых при помощи сенсоров O1 и O2. В связи с этим результаты экспериментов, отображённые в таблицах~\ref{default_res_unite} и ~\ref{default_res_ens}, демонстрируют неприемлемо низкие уровни точности классификации и чувствительности, а также недопустимо высокий уровень специфичности по сравнению с результатами, полученными для инверсированного положения.
+	\par Как было упомянуто выше, при расположении устройства в позиции по умолчанию малое число электродов покрывают часть скальпа, отвечающую за генерацию волн P300. В таком положении наибольшее влияние данного эффекта может быть замечено только в данных, регистрируемых при помощи сенсоров O1 и O2. В связи с этим результаты экспериментов, отображённые в таблицах~\ref{default_res_unite} и ~\ref{default_res_ens}, демонстрируют неприемлемо низкие уровни точности классификации и чувствительности, а также недопустимо высокий уровень специфичности по сравнению с результатами, полученными для инверсированного положения.
 
 \begin{table}[h]
 \centering
 \begin{tabular}{|c|c|c|c|c|}
 \hline
 \begin{tabular}[c]{@{}c@{}}Количество раундов \\ $N$\end{tabular} & \begin{tabular}[c]{@{}c@{}}Чувствительность \\ (TPR)\end{tabular} & \begin{tabular}[c]{@{}c@{}}Специфичность \\ (FPR)\end{tabular} & Битрейт & Точность \\ \hline
-10 & 24.53\% & 43.61\% & 1.15 & 45\% \\
-15 & 26.13\% & 42.77\% & 1.22 & 47\% \\
-20 & 27.7\% & 41.3\% & 1.23 & 48\% \\
-30 & 28.4\% & 40.76\% & 1.24 &  50\% \\ \hline
+10 & 24.04\% & 42.63\% & 2.88 & 49.04\% \\
+15 & 25.96\% & 41.99\% & 3.11 & 50.02\% \\
+20 & 26.21\% & 41.67\% & 3.12 & 50.36\% \\
+30 & 26.92\% & 41.35\% & 3.24 &  50.84\% \\ \hline
 \end{tabular}
 \caption{Результаты применения подхода с единым классификатором для положения устройства по умолчанию.}
 \label{default_res_unite}
@@ -538,10 +537,10 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 \begin{tabular}{|c|c|c|c|c|}
 \hline
 \begin{tabular}[c]{@{}c@{}}Количество раундов \\ $N$\end{tabular} & \begin{tabular}[c]{@{}c@{}}Чувствительность \\ (TPR)\end{tabular} & \begin{tabular}[c]{@{}c@{}}Специфичность \\ (FPR)\end{tabular} & Битрейт & Точность \\ \hline
-10 & 24.85\% & 43.24\% & 1.16 & 46\% \\
-15 & 25.13\% & 42.83\% & 1.19 & 47\% \\
-20 & 27.43\% & 41.72\% & 1.22 & 48\% \\
-30 & 29.12\% & 40.12\% & 1.25 &  51\% \\ \hline
+10 & 24.53\% & 46.53\% & 2.94 & 46.23\% \\
+15 & 26.42\% & 45.91\% & 3.17 & 47.17\% \\
+20 & 28.97\% & 44.03\% & 3.5 & 49.18\% \\
+30 & 32.08\% & 43.08\% & 3.85 &  50.7\% \\ \hline
 \end{tabular}
 \caption{Результаты применения подхода с отдельными классификаторами для положения устройства по умолчанию.}
 \label{default_res_ens}
@@ -555,10 +554,10 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 \begin{tabular}{|c|c|c|c|c|}
 \hline
 \begin{tabular}[c]{@{}c@{}}Количество раундов \\ $N$\end{tabular} & \begin{tabular}[c]{@{}c@{}}Чувствительность \\ (TPR)\end{tabular} & \begin{tabular}[c]{@{}c@{}}Специфичность \\ (FPR)\end{tabular} & Битрейт & Точность \\ \hline
-10 & 41.17\% & 34.2\% & 4.61 & 58\% \\
-15 & 42.11\% & 33.89\% & 4.88 & 59\% \\
-20 & 42.96\% & 33.02\% & 4.92 & 59\% \\
-30 & 43.34\% & 32.74\% & 4.95 &  60\% \\ \hline
+10 & 45.75\% & 37.36\% & 5.8 & 58.67\% \\
+15 & 48.41\% & 35.82\% & 5.96 & 60.13\% \\
+20 & 48.73\% & 33.94\% & 6.16 & 61.5\% \\
+30 & 49.36\% & 34.17\% & 6.08 &  61.51\% \\ \hline
 \end{tabular}
 \caption{Результаты применения подхода с единым классификатором для инверсированного положения устройства.}
 \label{reverse_res_unite}
@@ -569,10 +568,10 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 \begin{tabular}{|c|c|c|c|c|}
 \hline
 \begin{tabular}[c]{@{}c@{}}Количество раундов \\ $N$\end{tabular} & \begin{tabular}[c]{@{}c@{}}Чувствительность \\ (TPR)\end{tabular} & \begin{tabular}[c]{@{}c@{}}Специфичность \\ (FPR)\end{tabular} & Битрейт & Точность \\ \hline
-10 & 43.21\% & 30.24\% & 5.02 & 61\% \\
-15 & 44.12\% & 29.87\% & 5.07 & 62\% \\
-20 & 44.89\% & 29.91\% & 5.08 & 62\% \\
-30 & 45.1\% & 28.34\% & 5.12 &  64\% \\ \hline
+10 & 49.06\% & 35.07\% & 6.23 & 60.73\% \\
+15 & 49.67\% & 34.16\% & 6.31 & 61.56\% \\
+20 & 50.31\% & 32.58\% & 6.39 & 62.9\% \\
+30 & 52.83\% & 31.9\% & 6.71 &  64.06\% \\ \hline
 \end{tabular}
 \caption{Результаты применения подхода с отдельными классификаторами для инверсированного положения устройства.}
 \label{reverse_res_ens}
@@ -580,14 +579,14 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 
 \subsection{Обсуждение и~выводы}
 	\par Полученные результаты для системы с инверсированным положением устройства демонстрируют, что точность классификации предложенного подхода сравнима с существующими на данный момент исследованиями в данной области, использующими схожее оборудование и условия проведения экспериментов. В частности, в \cite{rhyme} была достигнута точность 60\% выявления волн P300 при использовании устройства {\it Emotiv EPOC.}
-	\par Для испытуемых значение чувствительности оказалось довольно низким. Таким образом, система распознавала приблизительную предполагаемую траекторию движения курсора, однако для распознавания непосредственно команды необходимо было ожидание в течение нескольких проб, как следствие, наблюдалось падение производительности системы. Тем не менее, приемлемое значение точности может быть достигнуто при низком значении специфичности. Высокое же значение данной характеристики дезориентирует пользователя и может привести к невозможности дальнейшего управления курсором, поскольку траектория в таких случаях радикально отличается от предполагаемой пользователем. Отметим, что полученные значения специфичности сравнимы в результатами, полученными в \cite{Kanoh}. Предложенный в данной работе метод позволяет добиться лучших результатов по сравнению с подходом, предложенным в исследовании~\cite{pseudo}, при использовании {\it Emotiv EPOC}.
+	\par Для испытуемых значение чувствительности оказалось довольно низким. Таким образом, система распознавала приблизительную предполагаемую траекторию движения курсора, однако для распознавания непосредственно команды необходимо было ожидание в течение нескольких проб, как следствие, наблюдалось падение производительности системы. Тем не менее, приемлемое значение точности может быть достигнуто при низком значении специфичности. Высокое же значение данной характеристики дезориентирует пользователя и может привести к невозможности дальнейшего управления курсором, поскольку траектория в таких случаях радикально отличается от предполагаемой пользователем. Отметим, что полученные значения специфичности не уступают результатам, полученным в \cite{Kanoh}. Предложенный в данной работе метод позволяет добиться лучших результатов по сравнению с подходом, предложенным в исследовании~\cite{pseudo}, при использовании {\it Emotiv EPOC}. 
 	\par Кроме того, в результате экспериментов было отмечено, что использование изображений стрелок в качестве визуальных стимулов ведёт к лучшим результатам, нежели изображений надписей.
-	\par Наилучший результат был получен при применении подхода, использующего отдельные классификаторы для различных типов стимулов. Тем не менее, полученные результаты не свидетельствуют о том, что использование подхода отдельных классификаторов гарантирует лучший результат, нежели использование подхода с единым классификатором.
-	\par Описанные результаты функционирования разработанной системы могут быть результатом различных причин, среди которых следующие:
-	\paragraph{Расположение сенсоров.}
-	\par В инверсированном положении расположение электродов являлось приблизительным и, поскольку устройство было разработано для эксплуатации в позиции по умолчанию, некоторые из сенсоров ненадёжно крепились к голове испытуемого, не обеспечивая должного качества регистрируемого сигнала. Кроме того, изменились также и положения опорных электродов, тем самым повлияв на внутреннюю обработку получаемых данных в устройстве.
-	\paragraph{Количество сенсоров.}
-	\par Как было упомянуто выше, в положении устройства по умолчанию сенсоры не покрывают часть скальпа, отвечающую за генерацию волн P300. В инверсированном положении приблизительно не более шести электродов расположены в данной области, и, тем не менее, ни один из них не расположен в области, наиболее активно отвечающей за данный процесс.
+	\par Наилучший результат был получен при применении подхода, использующего отдельные классификаторы для различных типов стимулов. Тем не менее, полученные результаты не свидетельствуют о том, что использование подхода отдельных классификаторов гарантирует лучший результат, нежели использование подхода с общим классификатором.
+	\par Более высокое качество функционирования разработанной системы может быть достигнуто путём решения следующих прооблем:
+	\paragraph{Неточное расположение сенсоров.}
+	\par В инверсированном положении расположение электродов являлось приблизительным и, поскольку устройство было разработано для эксплуатации в позиции по умолчанию, некоторые из сенсоров ненадёжно крепились к голове испытуемого, не обеспечивая должного качества регистрируемого сигнала. Кроме того, изменились также и положения опорных электродов, тем самым оказав влияние на внутреннюю обработку получаемых данных в устройстве.
+	\paragraph{Малое количество сенсоров в области интереса.}
+	\par Как было упомянуто выше, в положении устройства по умолчанию сенсоры практически не покрывают часть скальпа, отвечающую за генерацию волн P300. В инверсированном положении приблизительно не более шести электродов расположены в данной области, и, тем не менее, ни один из них не расположен в области, наиболее активно отвечающей за данный процесс.
 	\paragraph{Отношение сигнал-шум.}
 	\par Поскольку устройство было разработано для развлекательных целей, нет возможности гарантировать должное качество изготовления его деталей и, тем самым, качества снимаемого сигнала.
 	\paragraph{Задержка при фиксации сигналов.}
@@ -602,7 +601,9 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 		\item
 		Предложенный метод был протестирован при помощи программной реализации в системе MATLAB.
 		\item
-		Результаты работы описанного подхода находятся на уровне существующих на сегодняшний день методов решения данной задачи с использованием схожего оборудования. Сделанные выводы изложены в работе.
+		Результаты работы описанного подхода находятся на уровне существующих на сегодняшний день методов решения данной задачи с использованием схожего оборудования.
+		\item
+		Разработанный алгоритм может быть также применен в задаче управления динамическим объектом реального мира.
 	\end{itemize}\par
 
 
