--- a/temp.tex
+++ b/temp.tex
@@ -585,15 +585,16 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 	\par Более высокое качество функционирования разработанной системы может быть достигнуто путём решения следующих прооблем:
 	\paragraph{Неточное расположение сенсоров.}
 	\par В инверсированном положении расположение электродов являлось приблизительным и, поскольку устройство было разработано для эксплуатации в позиции по умолчанию, некоторые из сенсоров ненадёжно крепились к голове испытуемого, не обеспечивая должного качества регистрируемого сигнала. Кроме того, изменились также и положения опорных электродов, тем самым оказав влияние на внутреннюю обработку получаемых данных в устройстве.
+	\newline
 	\paragraph{Малое количество сенсоров в области интереса.}
 	\par Как было упомянуто выше, в положении устройства по умолчанию сенсоры практически не покрывают часть скальпа, отвечающую за генерацию волн P300. В инверсированном положении приблизительно не более шести электродов расположены в данной области, и, тем не менее, ни один из них не расположен в области, наиболее активно отвечающей за данный процесс.
 	\paragraph{Отношение сигнал-шум.}
-	\par Поскольку устройство было разработано для развлекательных целей, нет возможности гарантировать должное качество изготовления его деталей и, тем самым, качества снимаемого сигнала.
+	\par Поскольку устройство не было разработано для исследовательских целей, нет возможности гарантировать должное качество изготовления его деталей и, тем самым, качества снимаемого сигнала.
 	\paragraph{Задержка при фиксации сигналов.}
-	\par Отсутствие возможности получения исходных данных ЭЭГ без использования разработанного для устройства программного обеспечения также ведёт к падению производительности системы. По информации производителя, передача данных производится с обеспечением задержки во времени, не превышающей 15 мс, что является причиной потери некоторой доли данных.
+	\par Отсутствие возможности получения исходных данных ЭЭГ без использования разработанного для устройства программного обеспечения также ведёт к падению производительности системы. По информации производителя, передача данных производится с обеспечением задержки во времени, не превышающей 15 мс, что является причиной потери части информации.
 \newpage
 \section{Заключение}
-	\par В рамках настоящей дипломной работы были изучены существующие подходы к решению задач построения нейрокомпьютерных интерфейсов. Был предложен метод построения нейрокомпьютерного интерфейса для управления динамическим объектом, а также было проведено сравнение с аналогичными исследованиями последних лет.
+	\par В рамках настоящей дипломной работы были изучены существующие подходы к решению задач построения нейрокомпьютерных интерфейсов. Был предложен метод построения нейрокомпьютерного интерфейса для управления динамическим объектом, а также проведено сравнение с аналогичными исследованиями последних лет.
 	\par В ходе данной работы были получены следующие основные результаты:
 	\begin{itemize}\itemsep0pt
 		\item
@@ -601,7 +602,7 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 		\item
 		Предложенный метод был протестирован при помощи программной реализации в системе MATLAB.
 		\item
-		Результаты работы описанного подхода находятся на уровне существующих на сегодняшний день методов решения данной задачи с использованием схожего оборудования.
+		Результаты работы описанного подхода находятся на уровне существующих на сегодняшний день методов решения данной задачи с использованием схожего оборудования и условий проведения экспериментов.
 		\item
 		Разработанный алгоритм может быть также применен в задаче управления динамическим объектом реального мира.
 	\end{itemize}\par
